--- a/index.htm
+++ b/index.htm
@@ -14,14 +14,26 @@
     <div id="hyper-heading">HYPERUNIVERSITY</div>
     <div id="hyper-subtitle">Taking the Future to the University</div>
     <div id="hyper-about">
-      <p>Academia depends on the circulation and exchange of ideas, but the tools we currently use have not been made with the needs of researchers in mind. The lack of collaborative tools, tedious publishing processes and friction are just a few of the problems this entails. Tools to improve our scholarly workflows already exist, but remain opaque for many of us, as academic craftsmanship is no priority in most university curricula.
-	</p>
-<p>
-HYPERUNIVERSITY aims to bridge the incomplete digital turn in academia from solid analog techniques to digital ones, fit for the 21st century. HYPERUNIVERSITY provides curated resources for contemporary digital tools and training in computer skills to students and scholars in the humanities. HYPERUNIVERSITY delivers sustainable tool chains for scholarly work, from idea to publication, for authors and publishers. HYPERUNIVERSITY teaches note taking, text editing, reference management, layouting, and collaborative version control. HYPERUNIVERSITY contributes to public debates about research, editing, and digitized publishing practices.
-</p>
-<p>
-The working group HYPERUNIVERSITY consists of researchers from the humanities, social, and computer sciences. We learned how to use the free resources that others have generously shared on the web in order to reap the benefits of contemporary tooling. We want to give back what we have learned and encourage you to join us in this lifelong endeavour for a better and open world.
-</p>
+      <p>
+        Academia depends on the circulation and exchange of ideas, but the tools we currently use have not been made
+				with the needs of researchers in mind. The lack of collaborative tools, tedious publishing processes and friction
+				are just a few of the problems this entails. Tools to improve our scholarly workflows already exist, but remain
+				opaque for many of us, as academic craftsmanship is no priority in most university curricula.
+			</p>
+			<p>
+				HYPERUNIVERSITY aims to bridge the incomplete digital turn in academia from solid analog techniques to digital
+				ones, fit for the 21st century. HYPERUNIVERSITY provides curated resources for contemporary digital tools and
+				training in computer skills to students and scholars in the humanities. HYPERUNIVERSITY delivers sustainable tool
+				chains for scholarly work, from idea to publication, for authors and publishers. HYPERUNIVERSITY teaches note
+				taking, text editing, reference management, layouting, and collaborative version control. HYPERUNIVERSITY
+				contributes to public debates about research, editing, and digitized publishing practices.
+			</p>
+			<p>
+				The working group HYPERUNIVERSITY consists of researchers from the humanities, social, and computer sciences.
+				We learned how to use the free resources that others have generously shared on the web in order to reap the
+				benefits of contemporary tooling. We want to give back what we have learned and encourage you to join us in this
+				lifelong endeavour for a better and open world.
+			</p>
     </div>
   </div>
 </body>
