Add homepage title

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,5 @@
 ---
+title: "Home"
 ---
 <h1 id="hyper-heading">HYPERUNIVERSITY</h1>
 <div id="hyper-subtitle">Taking the Future to the University</div>
